src/test/ui/issues/issue-2718-a.stderr
error[E0072]: recursive type `pingpong::Pong` has infinite size
  --> $DIR/issue-2718-a.rs:8:5
   |
LL |     pub struct Pong(SendPacket<Ping>);
   |     ^^^^^^^^^^^^^^^^----------------^^
   |     |               |
   |     |               recursive without indirection
   |     recursive type has infinite size
   |
help: insert some indirection to make `pingpong::Pong` representable
   |
LL |     pub struct Pong(Box<SendPacket<Ping>>);
   |                     ^^^^                ^
LL |     pub struct Pong(Rc<SendPacket<Ping>>);
   |                     ^^^                ^
LL |     pub struct Pong(&SendPacket<Ping>);
   |                     ^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0072`.
